# otherworlds-rpg

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.beads/: .gitignore  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/dolt.20260304T045200Z.corrupt.backup/: config.yaml
.claude/commands/: ci-restart-last-run.md  ci-status.md  fix-ci.md  run-rust-integration-tests.md  run-rust-unit-tests.md  self-review.md
.github/workflows/: ci.yml
acceptance-tests/: README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
acceptance-tests/campaigns/: campaign-pipeline.test.ts
acceptance-tests/fixtures/: the-lost-temple.md
acceptance-tests/screenplay/: index.ts
acceptance-tests/screenplay/core/: actor.ts  browse-the-web.ts  interfaces.ts
acceptance-tests/screenplay/interactions/: click.ts  navigate.ts  upload-file.ts  wait-for-url.ts
acceptance-tests/screenplay/questions/: the-button-state.ts  the-campaign-id-from-url.ts  the-page-heading.ts  the-pipeline-step.ts
backend/: Cargo.toml  Dockerfile
backend/crates/otherworlds-api/: Cargo.toml
backend/crates/otherworlds-api/src/: error.rs  lib.rs  main.rs  orchestration.rs  state.rs
backend/crates/otherworlds-api/src/orchestration/: branch.rs
backend/crates/otherworlds-api/src/routes/: character.rs  content.rs  health.rs  inventory.rs  mod.rs  narrative.rs  play.rs  rules.rs  session.rs  world_state.rs
backend/crates/otherworlds-api/tests/: character_test.rs  content_test.rs  health_test.rs  inventory_test.rs  narrative_test.rs  rules_test.rs  session_test.rs  world_state_test.rs
backend/crates/otherworlds-api/tests/common/: mod.rs
backend/crates/otherworlds-character/: Cargo.toml
backend/crates/otherworlds-character/src/: lib.rs
backend/crates/otherworlds-character/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-character/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs
backend/crates/otherworlds-content/: Cargo.toml
backend/crates/otherworlds-content/src/: lib.rs
backend/crates/otherworlds-content/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-content/src/domain/: aggregates.rs  campaign_model.rs  commands.rs  compiler.rs  events.rs  mod.rs  parser.rs  validator.rs
backend/crates/otherworlds-core/: Cargo.toml
backend/crates/otherworlds-core/src/: aggregate.rs  branching.rs  clock.rs  command.rs  error.rs  event.rs  lib.rs  repository.rs  rng.rs
backend/crates/otherworlds-event-store/: Cargo.toml
backend/crates/otherworlds-event-store/src/: lib.rs  pg_event_repository.rs  schema.rs
backend/crates/otherworlds-event-store/tests/: pg_event_repository_tests.rs
backend/crates/otherworlds-inventory/: Cargo.toml
backend/crates/otherworlds-inventory/src/: lib.rs
backend/crates/otherworlds-inventory/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-inventory/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs
backend/crates/otherworlds-narrative/: Cargo.toml
backend/crates/otherworlds-narrative/src/: lib.rs
backend/crates/otherworlds-narrative/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-narrative/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs  value_objects.rs
backend/crates/otherworlds-rules/: Cargo.toml
backend/crates/otherworlds-rules/src/: lib.rs
backend/crates/otherworlds-rules/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-rules/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs
backend/crates/otherworlds-session/: Cargo.toml
backend/crates/otherworlds-session/src/: lib.rs
backend/crates/otherworlds-session/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-session/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs
backend/crates/otherworlds-test-support/: Cargo.toml
backend/crates/otherworlds-test-support/src/: clock.rs  lib.rs  repository.rs  rng.rs
backend/crates/otherworlds-world-state/: Cargo.toml
backend/crates/otherworlds-world-state/src/: lib.rs
backend/crates/otherworlds-world-state/src/application/: command_handlers.rs  mod.rs  query_handlers.rs
backend/crates/otherworlds-world-state/src/domain/: aggregates.rs  commands.rs  events.rs  mod.rs
backend/migrations/: 20250227000001_create_domain_events.sql  20260301000001_add_event_type_index.sql
documentation/: PRODUCT_MANIFESTO.md  TECHNICAL_MANIFESTO.md
documentation/adr/: 0001-event-sourcing-and-cqrs.md  0002-modular-monolith-architecture.md  0003-determinism-via-injected-abstractions.md  0004-bounded-context-isolation.md  0005-campaign-independence.md  0006-rust-axum-postgresql-tech-stack.md  0007-api-route-versioning.md  0008-workspace-lint-policy.md  0009-structured-domain-error-handling.md  0010-editorconfig-formatting-standards.md  0011-identity-uuid-determinism-exemption.md  0012-campaign-markdown-format.md  0013-screenplay-pattern-acceptance-tests.md  0014-cross-context-orchestration.md  0015-ios-mvvm-native-observation.md  0016-ios-protocol-based-http-abstraction.md  0017-ios-vertical-slice-bounded-contexts.md  0018-sveltekit-server-side-loading.md  0019-web-private-server-api-client.md  0020-cross-platform-theme-system.md  0021-timeline-branching-event-cloning.md  0022-correlation-id-propagation.md  0023-cross-platform-observability-opentelemetry.md  0024-proactive-optimistic-concurrency-control.md  0025-local-observability-infrastructure.md  0026-test-support-repository-pattern.md  README.md
infra/telemetry/: otel-collector-config.yaml  tempo-config.yaml
ios/OtherworldsApp/: Package.swift  project.yml
scripts/: dev.sh  run-integration-tests.sh  run-unit-tests.sh
web/: .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
web/e2e/: home.test.ts
web/src/: app.css  app.d.ts  hooks.server.ts
(+184 files in other folders)
