[workspace]
resolver = "3"
members = [
  "crates/otherworlds-core",
  "crates/otherworlds-event-store",
  "crates/otherworlds-narrative",
  "crates/otherworlds-rules",
  "crates/otherworlds-world-state",
  "crates/otherworlds-character",
  "crates/otherworlds-inventory",
  "crates/otherworlds-session",
  "crates/otherworlds-content",
  "crates/otherworlds-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Christopher Bartling"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Common types
uuid = { version = "1.21", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Randomness
rand = "0.9"

# Error handling
thiserror = "2.0"

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async trait
async-trait = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
