[package]
name = "otherworlds-character"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Otherworlds RPG — Character Management bounded context"

[lints]
workspace = true

[dependencies]
otherworlds-core = { path = "../otherworlds-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
otherworlds-test-support = { workspace = true }
