[package]
name = "otherworlds-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared domain abstractions for the Otherworlds RPG engine"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
