[package]
name = "otherworlds-event-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PostgreSQL-backed event store for the Otherworlds RPG engine"

[lints]
workspace = true

[dependencies]
otherworlds-core = { path = "../otherworlds-core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
