[package]
name = "otherworlds-world-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Otherworlds RPG — World State bounded context"

[lints]
workspace = true

[dependencies]
otherworlds-core = { path = "../otherworlds-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
